[project]
name = "nlp-in-python-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "gensim>=4.3.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
]
